# markdown-academic

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WHITEPAPER.md  WHITEPAPER.mda  serve_docs.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: api.html  example.html  ffi.html  index.html  robots.txt  sitemap.xml  styles.css  syntax.html  whitepaper.html
python/: README.md  pyproject.toml
python/markdown_academic/: __init__.py  core.py  version.py
python/tests/: __init__.py  test_core.py
rust/: Cargo.toml
rust/examples/: debug_output.rs  test_features.rs
rust/src/: ast.rs  bibtex.rs  ffi.rs  lib.rs  wasm.rs
rust/src/parser/: block.rs  inline.rs  lexer.rs  mod.rs
rust/src/render/: html.rs  mod.rs  pdf.rs
rust/src/render/math/: katex.rs  mod.rs
rust/src/resolve/: citations.rs  macros.rs  mod.rs  numbering.rs  references.rs
src/: ast.rs  bibtex.rs  error.rs  ffi.rs
src/parser/: block.rs  inline.rs
src/render/: html.rs
src/render/math/: katex.rs  mathml.rs
src/resolve/: macros.rs
wasm/: .gitignore  .npmignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
wasm/examples/: browser.html  cdn-example.html  node-example.mjs
wasm/scripts/: bundle.cjs
wasm/src/: index.ts
wasm/tests/: basic.test.ts
