[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-academic"
version = "0.1.0"
description = "Academic writing with the simplicity of Markdown - Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joseph R. Quinn", email = "quinn.josephr@protonmail.com"}
]
maintainers = [
    {name = "Joseph R. Quinn", email = "quinn.josephr@protonmail.com"}
]
keywords = [
    "markdown",
    "academic",
    "latex",
    "citations",
    "math",
    "bibtex",
    "scientific",
    "writing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/quinnjr/markdown-academic"
Documentation = "https://quinnjr.github.io/markdown-academic/"
Repository = "https://github.com/quinnjr/markdown-academic"
Issues = "https://github.com/quinnjr/markdown-academic/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["markdown_academic*"]

[tool.setuptools.package-data]
markdown_academic = ["py.typed", "*.so", "*.dylib", "*.dll"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=markdown_academic --cov-report=term-missing"
