[package]
name = "markdown-academic"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Joseph R. Quinn <quinn.josephr@protonmail.com>"]
description = "A Markdown extension for academic writing: math, citations, cross-references, and more"
repository = "https://github.com/quinnjr/markdown-academic"
keywords = ["markdown", "academic", "parser", "citations", "mda"]
categories = ["parsing", "text-processing"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mda-preview"
path = "src/bin/preview.rs"
required-features = ["editor"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde_json", "serde-wasm-bindgen", "console_error_panic_hook"]
mathml = ["latex2mathml"]
pdf = ["genpdf"]
editor = ["eframe", "egui_extras", "rfd"]

[dependencies]
nom = "8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
libc = "0.2"

# Optional dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
latex2mathml = { version = "0.2", optional = true }
genpdf = { version = "0.2", optional = true }

# Editor dependencies
eframe = { version = "0.33", optional = true, default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.33", optional = true, features = ["syntect"] }
rfd = { version = "0.15", optional = true }

[dev-dependencies]
pretty_assertions = "1"
